# 4dform-lint

./: AGENTS.md  PLAN.md  README.md  pyproject.toml
docs/rules/: alignment_consistency.md  consistent_spacing.md  events_required_for_method.md  inside_bounds.md  no_overlap.md  object_method_file_exists.md  object_method_project_method_exists.md  object_onLoad_onUnload_requires_form_level.md  page0_cross_page_overlap.md  shared_page_required.md  text_fits.md
src/fourdform_lint/: cli.py  config.py  engine.py  models.py  native.py  reporting.py  rules.py  schema.py  xliff.py
src/fourdform_lint/rules/: __init__.py  alignment_consistency.py  base.py  common.py  consistent_spacing.py  events_required_for_method.py  inside_bounds.py  no_overlap.py  object_method_file_exists.py  object_method_project_method_exists.py  object_onLoad_onUnload_requires_form_level.py  page0_cross_page_overlap.py  shared_page_required.py  text_fits.py
tests/: test_cli.py
tests/fixtures/: bad-alignment.form.4DForm  bad-spacing.form.4DForm  basic.form.4DForm  cropped-button.form.4DForm  font-size-text-fit.form.4DForm  invalid-json.form.4DForm  localized-button.form.4DForm  missing-width.form.4DForm  outside-bounds.form.4DForm  overlap.form.4DForm
